# quinn-daily-metrics

./: .copier-answers.yml  .dockerignore  .env.example  .env.gog  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  Jenkinsfile  Makefile  QC_SYSTEM_SUMMARY.md  README.md  TOOLS.md  V2_FOLDER_QC_PRODUCTION.py  a2a_service.py  agent.py  agent_card.py  alembic.ini  check_drive_max_times.sh  check_specific_folder.sh  debug_hanging_issues.py  docker-compose.local.yml  docker-compose.yml  example.env  k8s-deployment.yaml  max_times_summary.txt  meta-dev.yml  meta-prod.yml  pyproject.toml  qc_filtered_calls.jsonl  qc_test.py  qc_validator.py  requirements.in  requirements.txt  salesforce_client.py  service-order-management.skill  setup.cfg  web_service.py
ae_call_analysis/: .env.example  .gitignore  API_USAGE.md  BATCH3_COMPLETION_REPORT.md  COMPANY_INTELLIGENCE_IMPLEMENTATION.md  CONSOLIDATION_REPORT.md  CONTEXT_OVERFLOW_FIX.md  CREDENTIALS_SETUP.md  DATA_STATUS_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  Dockerfile  FINAL_SYSTEM_STATUS.md  FLEET_LOG.md  FULL_CONTENT_DEMO.md  GSD_STATUS_REPORT.md  LAUNCH_V1.md  MAPPING_FIX_REPORT.md  MODULAR_ARCHITECTURE.md  PHASE_2_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  SALESFORCE_ENHANCEMENT_SUMMARY.md  SALESFORCE_EVENT_UPDATE_IMPLEMENTATION.md  SCALABLE_PROCESSING_DESIGN.py  SHOW_RESULTS.py  SLACK_BOT_SETUP_GUIDE.md  SYSTEM_ANALYSIS.md  UNIT_TESTING_REPORT.md  V1_15MIN_WRAPPER.py  (+219 more)
(+355 files in other folders)
